--- a/style.css
+++ b/style.css
@@ -56,9 +56,9 @@ body::-webkit-scrollbar {
     height: 25px;
     width: 100px;
     border: none;
-    color: grey;
+    color: #FFF;
     border-radius: 5px;
-    background-color: #FFF;
+    background-color: #dc688f;
     position: fixed;
     top: 55%;
     left: 50%;
@@ -360,7 +360,7 @@ footer {
     width: 40%;
     border-radius: 5px; 
     position: absolute;
-    bottom: 10px;
+    bottom: 5px;
     left: 74%;
     transform: translate(-50%, -50%)
 }
@@ -371,13 +371,13 @@ footer {
     width: 40%;
     border-radius: 5px; 
     position: absolute;
-    bottom: 10px;
+    bottom: 5px;
     left: 27%;
     transform: translate(-50%, -50%)
 }
 
 .flex{
-    margin-top: 10px;
+    margin-top: 5px;
     color: #FFF;
     background-color: #cd236775;
     display: flex;
@@ -387,8 +387,8 @@ footer {
 .flex p {
     font-family: 'Source Sans 3', sans-serif;
     margin-left: 20px;
-    margin-bottom: 10px;
-    margin-top: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
 
 .flex button {
@@ -405,23 +405,23 @@ footer {
 .flex h3 {
     font-family: 'Source Sans 3', sans-serif;
     position: absolute;
-    margin-bottom: 10px;
-    margin-top: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
     right: 65px;
 }
 
 .flex h4{
     font-family: 'Source Sans 3', sans-serif;
-    margin-bottom: 10px;
-    margin-top: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
     padding-left: 10px;
 }
 
 .flex h5{
     font-family: 'Source Sans 3', sans-serif;
     position: absolute;
-    margin-bottom: 10px;
-    margin-top: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
     right: 15px;
 }
 
